updated to MC 1.19.3, bump mod version to 1.2.0