@@ -1,38 +1,32 @@
 package com.newjumper.denseores.datagen.data;
 
-import com.google.common.collect.ImmutableList;
-import com.mojang.datafixers.util.Pair;
-import net.minecraft.data.DataGenerator;
+import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.level.storage.loot.BuiltInLootTables;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.LootTables;
 import net.minecraft.world.level.storage.loot.ValidationContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 import java.util.Map;
-import java.util.function.BiConsumer;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
 
 public class DenseOresLootTableProvider extends LootTableProvider {
-    private final List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> lootTables = ImmutableList.of(Pair.of(DenseOresLootTables::new, LootContextParamSets.BLOCK));
+    private final List<SubProviderEntry> lootTables = List.of(new LootTableProvider.SubProviderEntry(DenseOresLootTables::new, LootContextParamSets.BLOCK));
 
-    public DenseOresLootTableProvider(DataGenerator gen) {
-        super(gen);
-    }
-
-    @NotNull
-    @Override
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return this.lootTables;
+    public DenseOresLootTableProvider(PackOutput output) {
+        super(output, BuiltInLootTables.all(), List.of(new LootTableProvider.SubProviderEntry(DenseOresLootTables::new, LootContextParamSets.BLOCK)));
     }
 
     @Override
-    protected void validate(Map<ResourceLocation, LootTable> map, @NotNull ValidationContext context) {
-        map.forEach((id, table) -> LootTables.validate(context, id, table));
+    public @NotNull List<SubProviderEntry> getTables() {
+        return lootTables;
+    }
+
+    @Override
+    protected void validate(Map<ResourceLocation, LootTable> map, @NotNull ValidationContext validationcontext) {
+        map.forEach((id, table) -> LootTables.validate(validationcontext, id, table));
     }
 }
